fix: make sure translations have proper attribution

--- a/src/locales/sk-SK.json
+++ b/src/locales/sk-SK.json
@@ -111,7 +111,7 @@
     "Copyright": "Copyright {date} © Project Bluefin a Universal Blue",
     "Project": "Bluefin je vytvorený pomocou [Universal Blue](https://universal-blue.org), a komunitným setom nástrojov navrhnutých aby vylepšili Linuxové systémy. Vytvorené z lásky k hre. Vitajte v indie Cloud Native.",
     "ProjectTitle": "Project Bluefin",
-    "References": "Všetky kresby sú vyrobené skutočními ľuďmi.\n\n- Stránka - [Jan Dolanský](https://dolansky.dev/) & [Kyle Gospodnetich](https://kylegospodneti.ch/)\n- Logá a tapety - [Jacob Schnurr](https://www.etsy.com/shop/JSchnurrCommissions?listing_id=1425657775)\n- Bluefin Ilustračná Tapeta - Andy Frazer, [DragonsofWales](https://www.etsy.com/fi-en/shop/DragonsofWales?ref=profile_header)\n- Preklady - [Tulip Blossom](https://github.com/tulilirockz)\n- Špeciálne poďakovanie - [Aaron Lake](https://www.linkedin.com/in/aaron-lake/), [Brian Ketelsen](https://brian.dev/), [Dustin Kirkland](https://www.kotterva.com/), a [Marco Ceppi](https://github.com/marcoceppi)"
+    "References": "Všetky kresby sú vyrobené skutočními ľuďmi.\n\n- Stránka - [Jan Dolanský](https://dolansky.dev/) & [Kyle Gospodnetich](https://kylegospodneti.ch/)\n- Logá a tapety - [Jacob Schnurr](https://www.etsy.com/shop/JSchnurrCommissions?listing_id=1425657775)\n- Bluefin Ilustračná Tapeta - Andy Frazer, [DragonsofWales](https://www.etsy.com/fi-en/shop/DragonsofWales?ref=profile_header)\n- Preklady (sk-SK) - [Tsu-gu](https://github.com/Tsu-gu)\n- Špeciálne poďakovanie - [Aaron Lake](https://www.linkedin.com/in/aaron-lake/), [Brian Ketelsen](https://brian.dev/), [Dustin Kirkland](https://www.kotterva.com/), a [Marco Ceppi](https://github.com/marcoceppi)"
   },
   "Navbar": {
     "ForYou": "Pre Teba",
